2014-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Add "--omit-dir-times" to rsync options to
	improve compatibility in situations where it is not possible to set
	directory modification times.

2014-01-27  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Factor out remaining rsync options, using
	long options to improve readability. Ensure RSYNC_VERBOSE setting is
	honored.

2014-01-21  Michael Meyer <michael.meyer@greenbone.net>

	* tools/greenbone-nvt-sync:
	Typo fixed.

2014-01-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (enable_plugin_and_dependencies): Add hash table
	argument to detect circular dependencies in recursive calls.
	(plugins_scheduler_init): Adjut enable_plugin_and_dependencies call
	accordingly.

2014-01-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/plugs_req.c, src/plugs_req.h, src/attack.c: Improved
	code formatting.

2014-01-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginlaunch.h: Removed unneeded proto for nasl_plugin_launch.

2014-01-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginload.c (plugins_reload_from_dir): Improved code
	formatting.

2014-01-10  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c, src/plugs_req.c, src/plugs_req.h, src/attack.c,
	src/save_kb.c, src/save_kb.h, src/pluginlaunch.c, src/pluginlaunch.h,
	src/pluginload.h: Use new typedef kb_t.

2014-01-10  Benoit Allard  <benoit.allard@greenbone.net>

	Post release version bump.

        * CMakeLists.txt: Set version to 4.0+beta5.

2014-01-10  Benoit Allard  <benoit.allard@greenbone.net>

	* CHANGES: Set release date for openvas-scanner-4.0+beta4 to 2014-01-10

2014-01-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (restart_scanner): Ignore SIGHUP signals while
	reloading. Rename function to reload_scanner. Adjust log messages.