@@ -1,3 +1,8 @@
+2014-01-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	* src/pluginscheduler.c (enable_plugin_and_dependencies): Return
+	directly when plugin was already enabled.
+
 2014-01-27  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* tools/greenbone-nvt-sync: Add "--omit-dir-times" to rsync options to
@@ -12,8 +17,7 @@
 
 2014-01-21  Michael Meyer <michael.meyer@greenbone.net>
 
-	* tools/greenbone-nvt-sync:
-	Typo fixed.
+	* tools/greenbone-nvt-sync: Typo fixed.
 
 2014-01-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
